my account: heading letterspacing and margin fixes

--- a/skin/frontend/default/newrespondf/css/iphone.css
+++ b/skin/frontend/default/newrespondf/css/iphone.css
@@ -5747,6 +5747,7 @@ table#checkout-review-table tfoot td .price {
     text-transform: uppercase;
     margin-top: 15px;
     padding: 0 12px;
+    letter-spacing: 1px;
 }
 
 .cart-empty {
